feat(update-web): add me page

--- a/apps/web/locales/en.json
+++ b/apps/web/locales/en.json
@@ -1,5 +1,7 @@
 {
-  "loginTitle": "Welcome to login",
-  "registerTitle": "Create account",
-  "submit": "Submit"
+  "page": {
+    "loginTitle": "Welcome to login",
+    "registerTitle": "Create account",
+    "submit": "Submit"
+  }
 }
